--- a/src/fiskaltrust.ifPOS/fiskaltrust.interface.csproj
+++ b/src/fiskaltrust.ifPOS/fiskaltrust.interface.csproj
@@ -50,7 +50,10 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.5.3" />
-    <PackageReference Include="System.Text.Json" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" PrivateAssets="all" />
   </ItemGroup>
 
 </Project>
