--- a/src/fiskaltrust.ifPOS/fiskaltrust.interface.csproj
+++ b/src/fiskaltrust.ifPOS/fiskaltrust.interface.csproj
@@ -50,6 +50,7 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.5.3" />
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
   <ItemGroup>
