--- a/src/fiskaltrust.Middleware.Interface.Client.Common.StrongName/fiskaltrust.Middleware.Interface.Client.Common.StrongName.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Common.StrongName/fiskaltrust.Middleware.Interface.Client.Common.StrongName.csproj
@@ -13,6 +13,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="fiskaltrust.interface" Version="1.3.73-rc1" />
+	  <PackageReference Include="fiskaltrust.interface.StrongName" Version="1.3.73-rc1" />
 	</ItemGroup>
 </Project>
