use explicit system.text.json version

--- a/src/fiskaltrust.ifPOS/fiskaltrust.interface.csproj
+++ b/src/fiskaltrust.ifPOS/fiskaltrust.interface.csproj
@@ -40,6 +40,10 @@
     <Reference Include="System.ServiceModel.Web" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' != 'net40' AND '$(TargetFramework)' != 'net461'">
+    <PackageReference Include="System.Text.Json" Version="9.0.4" />
+  </ItemGroup>
+
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' OR '$(TargetFramework)' == 'net461'">
     <PackageReference Include="System.Interactive.Async" Version="4.0.0" />
   </ItemGroup>
