--- a/src/fiskaltrust.Middleware.Interface.Client.Common/fiskaltrust.Middleware.Interface.Client.Common.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Common/fiskaltrust.Middleware.Interface.Client.Common.csproj
@@ -7,6 +7,6 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="fiskaltrust.interface" Version="1.3.73-rc1" />
+	  <PackageReference Include="fiskaltrust.interface" Version="1.3.73-rc2-25175-83284" />
 	</ItemGroup>
 </Project>
