--- a/src/fiskaltrust.Middleware.Interface.Client.Grpc/fiskaltrust.Middleware.Interface.Client.Grpc.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Grpc/fiskaltrust.Middleware.Interface.Client.Grpc.csproj
@@ -15,7 +15,7 @@
  	</ItemGroup>
 
  	<ItemGroup>
- 	  <PackageReference Include="fiskaltrust.interface" Version="1.3.73-rc1" />
+ 	  <PackageReference Include="fiskaltrust.interface" Version="1.3.73-rc2-25175-83284" />
  	</ItemGroup>
 
 	<ItemGroup>
