--- a/src/fiskaltrust.Middleware.Interface.Client.Soap/fiskaltrust.Middleware.Interface.Client.Soap.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Soap/fiskaltrust.Middleware.Interface.Client.Soap.csproj
@@ -12,7 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="fiskaltrust.interface" Version="1.3.73-rc5-25197-83747" />
+	  <PackageReference Include="fiskaltrust.interface" Version="1.3.75-rc5" />
 	</ItemGroup>
 
 	<ItemGroup>
