--- a/src/fiskaltrust.Middleware.Interface.Client.Grpc/fiskaltrust.Middleware.Interface.Client.Grpc.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Grpc/fiskaltrust.Middleware.Interface.Client.Grpc.csproj
@@ -4,6 +4,10 @@
 		<TargetFrameworks>net461;netstandard2.0;net6</TargetFrameworks>
 	</PropertyGroup>
 	
+	<PropertyGroup Condition="'$(TargetFramework)' != 'net40' AND '$(TargetFramework)' != 'net461'">
+    <DefineConstants>SYSTEM_TEXT_JSON</DefineConstants>
+  </PropertyGroup>
+
 	<ItemGroup Condition=" '$(TargetFramework)' != 'net6' ">
  		<PackageReference Include="Grpc.Core" Version="2.28.1" />
  		<PackageReference Include="protobuf-net.Grpc.Native" Version="1.0.37" />
