--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,14 +53,47 @@ jobs:
           projects: '$(Solution)'
           arguments: '--configuration $(BuildConfiguration)'
 
-      - task: codesigning@2
-        displayName: 'Code Signing '
+      - task: SSMClientToolsSetup@1
+        condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/storage/v')
+
+      - task: SSMSigningToolsSetup@1
+        condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/storage/v')
+
+      - task: DownloadSecureFile@1
+        condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/storage/v')
+        name: clientCertificate
+        displayName: "Download client certificate"
         inputs:
-          secureFileId: 'codesigning.pfx'
-          signCertPassword: '$(Code_Signing_Password)'
-          filePaths: |
-            **/fiskaltrust*.dll
-            **/fiskaltrust*.exe
+          secureFile: "codesigning_client_cert.p12"
+
+      - pwsh: smctl certificate download --keypair-alias=$(KEYPAIR_ALIAS) --name=KeyCert.pem --out=$(Agent.TempDirectory)
+        condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/storage/v')
+        env:
+          SM_HOST: "$(SM_HOST)"
+          SM_API_KEY: "$(SM_API_KEY)"
+          SM_CLIENT_CERT_PASSWORD: "$(SM_CLIENT_CERT_PASSWORD)"
+          SM_CLIENT_CERT_FILE: "$(clientCertificate.secureFilePath)"
+          SM_TLS_SKIP_VERIFY: false
+
+      - pwsh: |
+          Get-ChildItem -Path "$(Build.SourcesDirectory)\storage\src" -Filter *.dll -Recurse | ForEach-Object {
+            signtool sign `
+              /tr http://timestamp.sectigo.com/?td=sha256 `
+              /td SHA256 `
+              /fd SHA256 `
+              /csp "DigiCert Signing Manager KSP" `
+              /kc "$(KEYPAIR_ALIAS)" `
+              /f $(Agent.TempDirectory)\KeyCert.pem `
+              $_.FullName
+          }
+          Write-Host $(Get-Content -Path "~\.signingmanager\logs\smksp.log")
+        condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/storage/v')
+        env:
+          SM_HOST: "$(SM_HOST)"
+          SM_API_KEY: "$(SM_API_KEY)"
+          SM_CLIENT_CERT_PASSWORD: "$(SM_CLIENT_CERT_PASSWORD)"
+          SM_CLIENT_CERT_FILE: "$(clientCertificate.secureFilePath)"
+          SM_TLS_SKIP_VERIFY: false
 
       - script: dotnet test --no-build --configuration $(buildConfiguration)  --test-adapter-path:. --logger:nunit;LogFilePath=TestResults.xml
         displayName: 'dotnet test ifPOS'
