--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,7 +67,7 @@ jobs:
           secureFile: "codesigning_client_cert.p12"
 
       - pwsh: smctl certificate download --keypair-alias=$(KEYPAIR_ALIAS) --name=KeyCert.pem --out=$(Agent.TempDirectory)
-        condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/storage/v')
+        condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')        
         env:
           SM_HOST: "$(SM_HOST)"
           SM_API_KEY: "$(SM_API_KEY)"
@@ -76,8 +76,8 @@ jobs:
           SM_TLS_SKIP_VERIFY: false
 
       - pwsh: |
-          Get-ChildItem -Path "$(Build.SourcesDirectory)\storage\src" -Filter *.dll -Recurse | ForEach-Object {
-            signtool sign `
+          Get-ChildItem -Path "$(Build.SourcesDirectory)\storage\src" -Include fiskaltrust*.dll, fiskaltrust*.exe -Recurse | ForEach-Object {          
+          signtool sign `
               /tr http://timestamp.sectigo.com/?td=sha256 `
               /td SHA256 `
               /fd SHA256 `
