--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,20 +54,20 @@ jobs:
           arguments: '--configuration $(BuildConfiguration)'
 
       - task: SSMClientToolsSetup@1
-        condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/storage/v')
+        # condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/storage/v')
 
       - task: SSMSigningToolsSetup@1
-        condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/storage/v')
+        # condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/storage/v')
 
       - task: DownloadSecureFile@1
-        condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/storage/v')
+        # condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/storage/v')
         name: clientCertificate
         displayName: "Download client certificate"
         inputs:
           secureFile: "codesigning_client_cert.p12"
 
       - pwsh: smctl certificate download --keypair-alias=$(KEYPAIR_ALIAS) --name=KeyCert.pem --out=$(Agent.TempDirectory)
-        condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')        
+        # condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/storage/v')
         env:
           SM_HOST: "$(SM_HOST)"
           SM_API_KEY: "$(SM_API_KEY)"
@@ -87,7 +87,7 @@ jobs:
               $_.FullName
           }
           Write-Host $(Get-Content -Path "~\.signingmanager\logs\smksp.log")
-        condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/storage/v')
+        # condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/storage/v')
         env:
           SM_HOST: "$(SM_HOST)"
           SM_API_KEY: "$(SM_API_KEY)"
