--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,7 +67,7 @@ jobs:
           secureFile: "codesigning_client_cert.p12"
 
       - pwsh: smctl certificate download --keypair-alias=$(KEYPAIR_ALIAS) --name=KeyCert.pem --out=$(Agent.TempDirectory)
-        # condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/storage/v')
+        # condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
         env:
           SM_HOST: "$(SM_HOST)"
           SM_API_KEY: "$(SM_API_KEY)"
